<resources>
    <string name="app_name">PinjamIn</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Prasetya</string>
    <string name="nav_header_subtitle">Admin</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">Category</string>
    <string name="menu_item">Barang</string>
    <string name="menu_loaner">Peminjam</string>
    <string name="menu_loaning">Peminjaman/Pengembalian</string>
    <string name="app_name_uppercase">PINJAM.IN</string>
    <string name="btn_txt_delete">Delete</string>
    <string name="btn_txt_edit">Edit</string>
    <string name="btn_txt_return">Kembali</string>
    <string name="btn_txt_selesai">Selesai</string>
    <string name="txt_label_username">Username</string>
    <string name="txt_label_password">Password</string>
    <string name="txt_item_name">Nama Barang</string>
    <string name="txt_unit">Satuan</string>
    <string name="txt_category">Kategori</string>
    <string name="txt_stok">Stok</string>
    <string name="txt_stok_hint">100…</string>
    <string name="btn_txt_save">Simpan</string>
    <string name="btn_txt_reset">Reset</string>
    <string name="txt_nama">Nama</string>
    <string name="txt_phone_number">Nomor Telepon</string>
    <string name="txt_address">Alamat</string>
    <string name="txt_division">Divisi</string>
    <string name="txt_loaner">Peminjam</string>
    <string name="txt_borrowed_item">Barang yang akan dipinjam</string>
    <string name="txt_borrow_date">Tanggal Pinjam</string>
    <string name="txt_category_name">Nama Kategori</string>
    <string name="txt_description">Deskripsi</string>
    <string name="txt_available_item">Daftar Barang</string>
    <string name="tanggal_text">%1$d %2$s %3$d</string>
    <string name="txt_return_date">Tanggal Kembali</string>
    <string name="txt_borrowed_items">Barang yang dipinjam</string>
    <string-array name="list_division">
        <item>Humas</item>
        <item>HR</item>
        <item>Management</item>
        <item>Engineering</item>
        <item>Marketing</item>
        <item>Product</item>
        <item>Content</item>
    </string-array>
</resources>
