<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.project.pinjamin.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.project.pinjamin.ui.category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_item"
        android:name="com.project.pinjamin.ui.item.ItemFragment"
        android:label="@string/menu_item"
        tools:layout="@layout/fragment_slideshow" />
</navigation>
