<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        tools:context=".ui.loaning.create.CreateLoaningActivity">

        <TextView
            android:id="@+id/labelLoaner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_loaner"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinnerLoaner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:foreground="@drawable/auth_text_border"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/labelLoaner" />

        <TextView
            android:id="@+id/labelCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_category"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerLoaner" />

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:foreground="@drawable/auth_text_border"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/labelCategory" />

        <TextView
            android:id="@+id/labelItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_available_item"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerCategory" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAvailableItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/auth_text_border"
            android:gravity="center"
            android:numColumns="auto_fit"
            app:layout_constraintHeight_min="50dp"
            app:layout_constraintTop_toBottomOf="@id/labelItem" />

        <TextView
            android:id="@+id/labelListItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_borrowed_item"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvAvailableItem" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSelectedItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/auth_text_border"
            android:gravity="center"
            android:numColumns="auto_fit"
            app:layout_constraintHeight_min="50dp"
            app:layout_constraintTop_toBottomOf="@id/labelListItem" />

        <TextView
            android:id="@+id/labelBorrowDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_borrow_date"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvSelectedItem" />

        <EditText
            android:id="@+id/etBorrowDate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/auth_text_border"
            android:hint="@string/txt_borrow_date"
            android:paddingHorizontal="12dp"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelBorrowDate" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/primary_blue_200"
            android:text="@string/btn_txt_save"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/etBorrowDate" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/red_400"
            android:text="@string/btn_txt_reset"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/btnSave" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
