<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        tools:context=".ui.loaning.update.UpdateLoaningActivity">

        <TextView
            android:id="@+id/labelLoaner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_loaner"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etLoaner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/auth_text_border"
            android:enabled="false"
            android:paddingHorizontal="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelLoaner" />

        <TextView
            android:id="@+id/labelBorrowDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/txt_borrow_date"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etLoaner" />

        <EditText
            android:id="@+id/etBorrowDate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/auth_text_border"
            android:enabled="false"
            android:paddingHorizontal="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelBorrowDate" />

        <TextView
            android:id="@+id/labelListItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_borrowed_items"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etBorrowDate" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSelectedItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/auth_text_border"
            android:gravity="center"
            android:numColumns="auto_fit"
            app:layout_constraintHeight_min="50dp"
            app:layout_constraintTop_toBottomOf="@id/labelListItem" />

        <TextView
            android:id="@+id/labelReturnDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_return_date"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvSelectedItem" />

        <EditText
            android:id="@+id/etReturnDate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/auth_text_border"
            android:focusable="false"
            android:hint="@string/txt_return_date"
            android:inputType="date"
            android:paddingHorizontal="12dp"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelReturnDate" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/primary_blue_200"
            android:text="@string/btn_txt_save"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/etReturnDate" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
